--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="shortcut icon" href="./images/favicon.svg" type="image/svg">
     <title>Сложно сосредоточиться</title>
     <script src="./scripts/script.js"></script>
+    <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
     <link rel="stylesheet" href="./styles/globals.css">
-    <link rel="stylesheet" href="./fonts/fonts.css">
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -46,15 +46,15 @@
           </li>
         </ul>
       </nav>
-      <div class="header__title-text">
-        <p>no focus</p>
-      </div>
+      <h1 class="header__title-text">
+        no focus
+      </h1>
       <p class="header__accent-text title-decor">Что делать, когда не можешь делать ничего<br>
         Или почему нам так сложно сконцентрироваться, 
         особенно когда очень надо</p>
     </header>
     <main class="main__content">
-      <div class="main__block-text block-1">
+      <section class="main__block-text block-1">
         <div class="main__main-text-wrapper">
           <p class="main__main-text">Почему сосредоточиться так сложно</p>
         </div>
@@ -64,8 +64,8 @@
             <p>Особенно сложно сосредоточиться, когда задач много и все они — важные. 
             Где же легендарная многозадачность, когда она так нужна 
             вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
-             её просто не существует. Исследователи <span class="shadowed-text">выяснили</span>
-             , что мозгу тяжело 
+             её просто не существует. Исследователи <a class="shadowed-text text-link" href="#">выяснили</a>,
+            что мозгу тяжело 
              концентрироваться даже на двух делах одновременно. 
              А когда в поле внимания попадает несколько 
             важных задач, организм паникует и выделяет
@@ -84,8 +84,8 @@
             круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
           </div>
         </div>  
-      </div>
-      <div class="main__block-text block-2">
+      </section>
+      <section class="main__block-text block-2">
         <p class="main__main-text">Что снижает концентрацию внимания?</p>
         <div class="main__content-block-2">
           <div class="block-text block-text-2">
@@ -117,8 +117,8 @@
               тем больше времени затем нужно, чтобы вернуться к работе.</p>
           </div>
         </div>
-      </div>
-      <div class="main__block-text block-3">
+      </section>
+      <section class="main__block-text block-3">
         <div class="main__main-text-wrapper">
           <p class="main__main-text">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</p>
         </div>
@@ -152,8 +152,8 @@
             <p>Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
           </div>
       </div>
-      </div>
-      <div class="main__block-photo">
+      </section>
+      <section class="main__block-photo">
         <p class="title-decor photo">А можно в картинках?</p>
         <div class="main__block-photo gallery">
           <div class="gallery__item">
@@ -172,7 +172,7 @@
             <img class="gallery__image" src="./images/street.png" alt="Пустая улица города в розово-фиолетовых тонах с традиционными домами, деревьями и вывесками" />
           </div>
         </div>
-      </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__title-text">
