--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         особенно когда очень надо</p>
     </header>
     <main class="main__content">
-      <section class="main__block-text block-1">
+      <section class="main__block-text problem">
         <div class="main__main-text-wrapper">
-          <p class="main__main-text">Почему сосредоточиться так сложно</p>
+          <h2 class="main__main-text">Почему сосредоточиться так сложно</h2>
         </div>
-        <div class="main__content-block-1">
+        <div class="main__content-problem">
           <div class="block-text">
-            <p class="title-decor">Многозадачность</p>
+            <h3 class="title-decor">Многозадачность</h3>
             <p>Особенно сложно сосредоточиться, когда задач много и все они — важные. 
             Где же легендарная многозадачность, когда она так нужна 
             вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
@@ -85,11 +85,11 @@
           </div>
         </div>  
       </section>
-      <section class="main__block-text block-2">
-        <p class="main__main-text">Что снижает концентрацию внимания?</p>
-        <div class="main__content-block-2">
+      <section class="main__block-text distractions">
+        <h2 class="main__main-text">Что снижает концентрацию внимания?</h2>
+        <div class="main__content-distractions">
           <div class="block-text block-text-2">
-            <p class="title-decor">Многозадачность</p>
+            <h3 class="title-decor">Многозадачность</h3>
             <p>Как концентрация может снижаться из-за… концентрации? 
               Любая стрессовая ситуация (и резко меняющийся мир в целом) 
               заставляет наш мозг постоянно «сканировать» окружающую среду 
@@ -118,37 +118,37 @@
           </div>
         </div>
       </section>
-      <section class="main__block-text block-3">
+      <section class="main__block-text improvement">
         <div class="main__main-text-wrapper">
-          <p class="main__main-text">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</p>
+          <h2 class="main__main-text">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         </div>
-        <div class="main__content-block-3">
-          <p class="title-decor">5 простых (на самом деле не очень) советов</p>
+        <div class="main__content-improvement">
+          <h3 class="title-decor">5 простых (на самом деле не очень) советов</h3>
           <div class="block-text block-text-3">
             <p class="title-decor regular">Представьте небо и облака</p>
-            <p>Или листья в ручье. Тут дело в лёгкой медитации, которая 
+            <h4>Или листья в ручье. Тут дело в лёгкой медитации, которая 
               помогает успокоиться. Ведь часто именно тревожные мысли о 
               сложных задачах как раз и мешают эти сложные задачи делать. 
               В такие моменты можно закрыть глаза и представить, что чистое 
               небо — это вы, а облака — тревожные мысли. И сколько бы их ни 
               было — ясное небо всегда будет где-то там, за тучами, и никуда 
               не денется. Это упражнение поможет вернуться в настоящий момент, 
-              а не волноваться о потенциальных проблемах из будущего.</p>
+              а не волноваться о потенциальных проблемах из будущего.</h4>
           </div>
           <div class="block-text">
-            <p class="title-decor regular">Включите музыку</p>
+            <h4 class="title-decor regular">Включите музыку</h4>
             <p>Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист с «белым шумом» или нейромузыкой.</p>
           </div>
           <div class="block-text">
-            <p class="title-decor regular">Прогуляйтесь</p>
+            <h4 class="title-decor regular">Прогуляйтесь</h4>
             <p>Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
           </div>
           <div class="block-text">
-            <p class="title-decor regular">Хорошо ешьте</p>
+            <h4 class="title-decor regular">Хорошо ешьте</h4>
             <p>Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
           </div>
           <div class="block-text">
-            <p class="title-decor regular">Читайте</p>
+            <h4 class="title-decor regular">Читайте</h4>
             <p>Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
           </div>
       </div>
@@ -174,7 +174,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer decorated-zone">
       <div class="footer__title-text">
         <p>focus</p>
       </div>
