--- a/index.html
+++ b/index.html
@@ -125,15 +125,16 @@
         <div class="main__content-improvement">
           <h3 class="title-decor">5 простых (на самом деле не очень) советов</h3>
           <div class="block-text block-text-3">
-            <p class="title-decor regular">Представьте небо и облака</p>
-            <h4>Или листья в ручье. Тут дело в лёгкой медитации, которая 
+            <h4 class="title-decor regular">Представьте небо и облака</h4>
+            <p>Или листья в ручье. Тут дело в лёгкой медитации, которая 
               помогает успокоиться. Ведь часто именно тревожные мысли о 
               сложных задачах как раз и мешают эти сложные задачи делать. 
               В такие моменты можно закрыть глаза и представить, что чистое 
               небо — это вы, а облака — тревожные мысли. И сколько бы их ни 
               было — ясное небо всегда будет где-то там, за тучами, и никуда 
               не денется. Это упражнение поможет вернуться в настоящий момент, 
-              а не волноваться о потенциальных проблемах из будущего.</h4>
+              а не волноваться о потенциальных проблемах из будущего.
+            </p>
           </div>
           <div class="block-text">
             <h4 class="title-decor regular">Включите музыку</h4>
