Исправил все недочёты в проекте №3

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="main__main-text-wrapper">
           <h2 class="main__main-text">Почему сосредоточиться так сложно</h2>
         </div>
-        <div class="main__content-problem">
+        <div class="main__content-problem all-content-blocks">
           <div class="block-text">
             <h3 class="title-decor">Многозадачность</h3>
             <p>Особенно сложно сосредоточиться, когда задач много и все они — важные. 
@@ -73,7 +73,7 @@
             Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
           </div>
            <div class="block-text">
-            <p class="title-decor">Дофамин</p>
+            <h3 class="title-decor">Дофамин</h3>
             <p>С гормонами стресса всё понятно, но дальше — ещё интереснее. 
             В нашей невозможности сосредоточиться замешана и полная 
             противоположность стрессу — дофамин. Это вещество участвует в 
@@ -87,8 +87,8 @@
       </section>
       <section class="main__block-text distractions">
         <h2 class="main__main-text">Что снижает концентрацию внимания?</h2>
-        <div class="main__content-distractions">
-          <div class="block-text block-text-2">
+        <div class="main__content-distractions all-content-blocks">
+          <div class="block-text block-text-distraction">
             <h3 class="title-decor">Многозадачность</h3>
             <p>Как концентрация может снижаться из-за… концентрации? 
               Любая стрессовая ситуация (и резко меняющийся мир в целом) 
@@ -97,8 +97,8 @@
               Но быть собранными всё время — невозможно. Концентрация — мышца, 
               и она может не выдержать, если не давать ей отдохнуть.</p>
           </div>
-          <div class="block-text block-text-2">
-            <p class="title-decor">Еда</p>
+          <div class="block-text block-text-distraction">
+            <h3 class="title-decor">Еда</h3>
             <p>«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно 
               доставляют в мозг энергию и помогают ему лучше работать. 
               Но уходит эта энергия также быстро, как и приходит. А мы в 
@@ -106,8 +106,8 @@
               «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. 
               И хотим ещё больше быстрых углеводов.</p>
           </div>
-          <div class="block-text block-text-2">
-            <p class="title-decor">Гаджеты</p>
+          <div class="block-text block-text-distraction">
+            <h3 class="title-decor">Гаджеты</h3>
             <p>Да-да, это та самая ситуация, когда на экране ноутбука — код, 
               в наушниках — подкаст, а на компьютере фоном — ещё и видео 
               с забавными утятами. В результате мозг пытается переключиться 
@@ -122,9 +122,9 @@
         <div class="main__main-text-wrapper">
           <h2 class="main__main-text">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         </div>
-        <div class="main__content-improvement">
+        <div class="main__content-improvement all-content-blocks">
           <h3 class="title-decor">5 простых (на самом деле не очень) советов</h3>
-          <div class="block-text block-text-3">
+          <div class="block-text block-text-improvement">
             <h4 class="title-decor regular">Представьте небо и облака</h4>
             <p>Или листья в ручье. Тут дело в лёгкой медитации, которая 
               помогает успокоиться. Ведь часто именно тревожные мысли о 
@@ -155,7 +155,7 @@
       </div>
       </section>
       <section class="main__block-photo">
-        <p class="title-decor photo">А можно в картинках?</p>
+        <h2 class="title-decor photo">А можно в картинках?</h2>
         <div class="main__block-photo gallery">
           <div class="gallery__item">
             <img class="gallery__image" src="./images/sunset.png" alt="Силуэты гор и птиц на фоне заката над спокойным морем в фиолетово-розовых тонах" />
